prevent horizontal scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 html {
     font-family: Menlo,Monaco,Lucida Console,Courier New,Courier,monospace;
     background: #fff;
-    letter-spacing: -.025rem
+    letter-spacing: -.025rem;
+    overflow-x: hidden;
 }
 
 body, figure {
@@ -12,6 +13,7 @@ body, figure {
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     padding-bottom: 70px;
+    overflow-x: hidden;
 }
 
 header, main, footer {
